--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,12 +1,36 @@
 version: '3.3'
-services:
 
+volumes:
+  postgre_data:
+  static_volume:
+  media_volume:
+
+services:
   frontend:
     build:
       context: ../frontend
       dockerfile: Dockerfile
     volumes:
       - ../frontend/:/app/result_build/
+
+  backend:
+    image: andreygurtovoy/foodgram-project:latest
+    restart: always
+    volumes:
+      - static_volume:/app/staticfiles/
+      - media_volume:/app/media/
+    depends_on:
+      - db
+    env_file:
+      - ./.env
+
+  db:
+    image: postgres:13.0-alpine
+    volumes:
+      - postgre_data:/var/lib/postgresql/data
+    env_file:
+      - ./.env
+
   nginx:
     image: nginx:1.19.3
     ports:
@@ -15,3 +39,8 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
+      - static_volume:/app/staticfiles/
+      - media_volume:/app/media/
+    depends_on:
+      - backend
+      - frontend
