--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,46 +1,49 @@
 version: '3.3'
-
-volumes:
-  postgre_data:
-  static_volume:
-  media_volume:
-
 services:
-  frontend:
-    build:
-      context: ../frontend
-      dockerfile: Dockerfile
+  db:
+    image: postgres:14.5
     volumes:
-      - ../frontend/:/app/result_build/
+      - /var/lib/postgresql/data/
+    env_file:
+      - ./.env
+    restart: always
 
   backend:
     image: andreygurtovoy/foodgram-project:latest
     restart: always
     volumes:
-      - static_volume:/app/staticfiles/
-      - media_volume:/app/media/
+      - data_value:/app/data/
+      - static_value:/app/static/
+      - media_value:/app/media/
+      - redoc:/app/api/docs/
     depends_on:
       - db
     env_file:
       - ./.env
 
-  db:
-    image: postgres:13.0-alpine
+  frontend:
+    image: andreygurtovoy/foodgram-project:latest
     volumes:
-      - postgre_data:/var/lib/postgresql/data
-    env_file:
-      - ./.env
-
+      - ../frontend/:/app/result_build/
+    depends_on:
+      - backend
   nginx:
-    image: nginx:1.19.3
+    image: nginx:1.18.0
     ports:
-      - "80:80"
+      - "81:80"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
-      - ../docs/:/usr/share/nginx/html/api/docs/
-      - static_volume:/app/staticfiles/
-      - media_volume:/app/media/
+      - static_value:/var/html/static/
+      - media_value:/var/html/media/
+      - redoc:/usr/share/nginx/html/api/docs/
     depends_on:
-      - backend
       - frontend
+    restart: always
+
+volumes:
+  static_value:
+  media_value:
+  postgres_data:
+  data_value:
+  redoc:
