--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -6,15 +6,14 @@ services:
       - /var/lib/postgresql/data/
     env_file:
       - ./.env
-
+  
   backend:
-    image: andreygurtovoy/foodgram-project:latest
-    expose:
-      - 8000
-    restart: always
+    build:
+      context: ../backend
+      dockerfile: Dockerfile
     volumes:
-      - static_value:/app/backend_static/
-      - media_value:/app/backend_media/
+      - static_value:/backend/static/
+      - media_value:/backend/media/
     depends_on:
       - db
     env_file:
@@ -27,18 +26,13 @@ services:
     volumes:
       - ../frontend/:/app/result_build/
   nginx:
-    image: nginx:1.18.0
+    image: nginx:1.19.3
     ports:
-      - "80:80"
+      - "81:80"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - static_value:/app/static/
-      - media_value:/app/media/
       - ../frontend/build:/usr/share/nginx/html/
-      - ../docs:/usr/share/nginx/html/api/docs/
-    restart: always
-    depends_on:
-      - frontend
+      - ../docs/:/usr/share/nginx/html/api/docs/
 
 volumes:
   postgres_data:
