--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ ignore =
     I004,
     W503,
     F811,
-    F401,
+per-file-ignores = __init__.py:F401,
 exclude =
     # tests/,
     */migrations/,
