--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -29,11 +29,9 @@ services:
     ports:
       - "81:80"
     volumes:
-      - type: bind
-        source: ./default.conf
-        target: /etc/nginx/conf.d/default.conf
-      - static_value:/var/html/static/
-      - media_value:/var/html/media/
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - ../frontend/build:/usr/share/nginx/html/
+      - ../docs/:/usr/share/nginx/html/api/docs/
 
 volumes:
   postgres_data:
