--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -6,26 +6,29 @@ on: [push]
 jobs:
   tests:
     runs-on: ubuntu-latest
+    
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python
+    - name: Set up Python 
       uses: actions/setup-python@v2
       with:
         python-version: 3.7
+    
     - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
+      run: | 
+        python -m pip install --upgrade pip 
         pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
-        cd backend/
-        pip install -r requirements.txt
-    - name: Test with flake8 and pytest
+        pip install -r backend/requirements.txt
+    - name: Test with flake8 and pytests
       run: |
         python -m flake8
         pytest
+  
   build_and_push_to_docker_hub:
-    name: Push Docker image "backend" to Docker Hub
+    name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     needs: tests
+    if: github.ref == 'refs/heads/master'
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
@@ -34,7 +37,7 @@ jobs:
       - name: Login to Docker
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
+          username: ${{ secrets.DOCKER_USERNAME }} 
           password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Push to Docker Hub
         uses: docker/build-push-action@v2
