--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -2,6 +2,7 @@
 name: foodgram_backend workflow
 
 on: [push]
+if: github.ref == 'refs/heads/master'
 
 jobs:
   tests:
@@ -12,17 +13,16 @@ jobs:
     - name: Set up Python 
       uses: actions/setup-python@v2
       with:
-        python-version: 3.7
+        python-version: 3.10
     
     - name: Install dependencies
       run: | 
         python -m pip install --upgrade pip 
         pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
         pip install -r backend/requirements.txt
-    - name: Test with flake8 and pytests
+    - name: Test with flake8
       run: |
-        python -m flake8
-        pytest
+        python -m flake8 backend/
   
   build_and_push_to_docker_hub:
     name: Push Docker image to Docker Hub
