--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -29,6 +29,7 @@ PyJWT==2.5.0
 python-dotenv==0.20.0
 python3-openid==3.2.0
 pytz==2022.4
+reportlab
 requests==2.26.0
 requests-oauthlib==1.3.1
 six==1.16.0
