--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,11 +1,11 @@
 server {
     listen 80;
-    server_name 127.0.0.1;
+    server_name localhost;
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
-    location /static/backend {
+    location /static/admin {
         root /var/html/;
     }
 
