--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -11,8 +11,8 @@ services:
     image: andreygurtovoy/foodgram_backend:latest
     restart: always
     volumes:
-      - static_value:/backend/static/
-      - media_value:/backend/media/
+      -  static_value:/backend/static/
+      -  media_value:/backend/media/
     depends_on:
       - db
     env_file:
@@ -32,6 +32,8 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
+      - static_value:/var/html/static/
+      - media_value:/var/html/media/
 
 volumes:
   postgres_data:
