--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,6 +1,7 @@
 server {
     listen 80;
     server_name localhost;
+    
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
@@ -9,9 +10,14 @@ server {
         root /var/html/;
     }
 
+    location /static/rest_framework/ {
+        root /var/html/;
+    }
+
     location /media/ {
         root /var/html/;
     }
+    
     location /api/ {
         proxy_pass http://backend:8000;
         proxy_set_header        Host      $host;
