--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name localhost;
+    server_name 51.250.107.182 localhost;
     
     location /api/docs/ {
         root /usr/share/nginx/html;
