--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -13,8 +13,8 @@ services:
       dockerfile: Dockerfile
     restart: always
     volumes:
-      -  static_value:/static/
-      -  media_value:/media/
+      -  static_value:/app/static/
+      -  media_value:/app/media/
     depends_on:
       - db
     env_file:
