--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -3,23 +3,24 @@ services:
   db:
     image: postgres:13.0-alpine
     volumes:
-      - /var/lib/postgresql/data/
+      - postgresql_data:/var/lib/postgresql/data/
     env_file:
       - ./.env
   
   backend:
-    image: andreygurtovoy/foodgram_backend:latest
+    image: andreygurtovoy/foodgram_backend:1.1
     restart: always
     volumes:
       -  static_value:/app/static/
       -  media_value:/app/media/
+      - redoc:/app/api/docs/
     depends_on:
       - db
     env_file:
       - ./.env
 
   frontend:
-    image: andreygurtovoy/foodgram_frontend:latest
+    image: andreygurtovoy/foodgram_frontend:1.2
     volumes:
       - ../frontend/:/app/result_build/
   
@@ -30,7 +31,7 @@ services:
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
-      - ../docs/:/usr/share/nginx/html/api/docs/
+      - redoc:/usr/share/nginx/html/api/docs/
       - static_value:/var/html/static/
       - media_value:/var/html/media/
     depends_on:
@@ -38,7 +39,7 @@ services:
       - backend
 
 volumes:
-  postgres_data:
+  postgresql_data:
   static_value:
   media_value:
-  result_build:
+  redoc:
