--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -3,24 +3,23 @@ services:
   db:
     image: postgres:13.0-alpine
     volumes:
-      - postgresql_data:/var/lib/postgresql/data/
+      - /var/lib/postgresql/data/
     env_file:
       - ./.env
   
   backend:
-    image: andreygurtovoy/foodgram_backend:1.1
+    image: andreygurtovoy/foodgram_backend:1.1-alpine
     restart: always
     volumes:
-      -  static_value:/app/static/
-      -  media_value:/app/media/
-      - redoc:/app/api/docs/
+      - static_value:/app/static/
+      - media_value:/app/media/
     depends_on:
       - db
     env_file:
       - ./.env
 
   frontend:
-    image: andreygurtovoy/foodgram_frontend:1.2
+    image: andreygurtovoy/foodgram_frontend:1.2-alpine
     volumes:
       - ../frontend/:/app/result_build/
   
@@ -29,17 +28,15 @@ services:
     ports:
       - "80:80"
     volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx.conf:/etc/nginx/conf.d/nginx.conf
       - ../frontend/build:/usr/share/nginx/html/
-      - redoc:/usr/share/nginx/html/api/docs/
+      - ../docs/:/usr/share/nginx/html/api/docs/
       - static_value:/var/html/static/
       - media_value:/var/html/media/
     depends_on:
-      - frontend
       - backend
 
 volumes:
   postgresql_data:
   static_value:
   media_value:
-  redoc:
