--- a/backend/foodgram/Dockerfile
+++ b/backend/foodgram/Dockerfile
@@ -1,9 +1,13 @@
-FROM python:3.10-slim
+FROM python:3.9-slim
 
 WORKDIR /app
 
+COPY requirements.txt .
+
+RUN apt update && apt install -y libpq-dev gcc
+
+RUN pip install -r requirements.txt --no-cache-dir
+
 COPY . .
 
-RUN pip3 install -r requirements.txt --no-cache-dir
-
-CMD ["gunicorn", "foodgram.wsgi:application", "--bind", "0:8000" ]
+CMD gunicorn foodgram.wsgi:application --bind 0:8000
