--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - ./.env
   
   backend:
-    image: andreygurtovoy/foodgram_backend:1.1-alpine
+    image: andreygurtovoy/foodgram_backend
     restart: always
     volumes:
       - static_value:/app/static/
@@ -19,7 +19,7 @@ services:
       - ./.env
 
   frontend:
-    image: andreygurtovoy/foodgram_frontend:1.2-alpine
+    image: andreygurtovoy/foodgram_frontend
     volumes:
       - ../frontend/:/app/result_build/
   
